fixed info area vertical overflow to use a scrollbar

--- a/visualizer/css/main.css
+++ b/visualizer/css/main.css
@@ -56,6 +56,8 @@ button:disabled {
 
 #info {
   grid-area: info;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #legend {
